--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bundle/vim-pathogen"]
 	path = bundle/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
+[submodule "bundle/DirDiff.vim"]
+	path = bundle/DirDiff.vim
+	url = git://github.com/vim-scripts/DirDiff.vim.git
