--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/DirDiff.vim"]
 	path = bundle/DirDiff.vim
 	url = git://github.com/vim-scripts/DirDiff.vim.git
+[submodule "bundle/vim-a"]
+	path = bundle/vim-a
+	url = https://github.com/vim-scripts/a.vim
