Change git submodule URLs to https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "bundle/vim-pathogen"]
 	path = bundle/vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen.git
 [submodule "bundle/DirDiff.vim"]
 	path = bundle/DirDiff.vim
-	url = git://github.com/vim-scripts/DirDiff.vim.git
+	url = https://github.com/vim-scripts/DirDiff.vim.git
 [submodule "bundle/vim-a"]
 	path = bundle/vim-a
 	url = https://github.com/vim-scripts/a.vim
 [submodule "bundle/tabular"]
 	path = bundle/tabular
-	url = git://github.com/godlygeek/tabular.git
+	url = https://github.com/godlygeek/tabular.git
 [submodule "bundle/vim-scala"]
 	path = bundle/vim-scala
 	url = https://github.com/derekwyatt/vim-scala.git
